# r2s

./: API.md  DASHBOARD_INTEGRATION.md  DOCKER_README.md  Dockerfile  ERD.md  FINAL_ENHANCEMENT_REPORT.md  GITHUB_SECRETS.md  LICENSE  MANIFEST.in  PRD.md  README.md  SEC_EVAL.md  TASKS.md  TROUBLESHOOTING.md  VULNERABILITY_RESEARCH.md  docker-compose.yml  docker-run.sh  info.md  install_cross_platform.py  install_linux.sh  install_windows.bat  pyproject.toml  pytest.ini  react2shell.yaml  react2shell_checker.py  react2shell_checker_linux.py  react2shell_checker_unified.py  react2shell_checker_windows.py  requirements-dev.txt  requirements.txt  setup.py
.github/: dependency-review-config.yml
.github/workflows/: ci-cd.yml  dependency-review.yml  security.yml
choco/: README.md  build-choco.ps1  react2shell-checker.nuspec  react2shell-checker.xsd
choco/tools/: chocolateyinstall.ps1
homebrew-tap/: README.md  react2shell-checker.rb
test_project/: package.json  package_vulnerable.json
tests/: test_checker.py  test_integration.py  test_performance.py
