[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "react2shell-checker"
version = "2.0.0"
description = "React2Shell (CVE-2025-55182) Vulnerability Detector"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.6"
authors = [
    {name = "Security Team", email = "security@example.com"},
]
maintainers = [
    {name = "Security Team", email = "security@example.com"},
]
keywords = ["security", "vulnerability", "react", "cve", "scanner"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "requests>=2.25.1",
    "packaging",
]

[project.urls]
Homepage = "https://github.com/your-org/react2shell-checker"
Documentation = "https://github.com/your-org/react2shell-checker#readme"
Repository = "https://github.com/your-org/react2shell-checker.git"
Issues = "https://github.com/your-org/react2shell-checker/issues"
Changelog = "https://github.com/your-org/react2shell-checker/blob/main/README.md"

[project.scripts]
react2shell-checker = "react2shell_checker_unified:main"

[tool.setuptools]
packages = ["."]
package-dir = {"." = "."}

[tool.setuptools.package-data]
"" = ["*.md"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.coverage.run]
source = ["react2shell_checker_unified"]
omit = ["tests/*", "setup.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]

[tool.black]
line-length = 88
target-version = ['py36', 'py37', 'py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.6"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true